profilelist1exp/unpackaged/objects/ProdDate__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Proddate__c</fullName>
        <label>Region_NA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region_APJ__c</fullName>
        <label>Region_APJ</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region_EMEA__c</fullName>
        <label>Region_EMEA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region_LATAM__c</fullName>
        <label>Region_LATAM</label>
        <type>DateTime</type>
    </fields>
    <label>ProdDate</label>
</CustomObject>